[package]
name = "kakaku_com"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
scraper = "0.18.1"
tokio = { version = "1.35.0",features = ["full"] }
reqwest = "0.11.22"
encoding_rs = "0.8.33"
polars = "0.35.4"